2002-01-07  Christian Stimming  <stimming@tuhh.de>

	* src/scm/commodity-utilities.scm: Tweaked the exchange rate
	calculation so that it will work in even more complicated cases,
	involving different Euroland and other currencies.

2002-01-06  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm, src/scm/report/*.scm: Added option
	hyperlink in report warnings.

	* doc/sgml/*/xacc-euro.sgml: Fixed DEM rate as pointed out by
	Gregor Hoffleit <gregor@hoffleit.de>.

2002-01-05  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/html-*.scm,
	src/scm/report/reports/stylesheet-*.scm: Added nowrap attribute
	for cells containing numbers.

	* po/de.po: String fix by Christian Meyer <chrisime@gnome.org>.

2001-12-30  Christian Stimming  <stimming@tuhh.de>

	* po/el.po, po/glossary/el.po: Added initial Greek translation by
	Simos Xenitellis <simos@hellug.gr>

	* po/glossary/pt.po: Added portugese translation by Duarte Loreto
	<happyguy_pt@hotmail.com>

	* po/az.po: Added Azerbaijani Turkic translation by
	<azerb_linux@hotmail.com>.

2001-12-18  Christian Stimming  <stimming@tuhh.de>

	* po/sk.po: Updated Slovak translation from Zdenko Podobny
	<zdpo@mailbox.sk>. 

2001-12-12  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/druid-euro-conv.c: Fixed support for using existing
	exchange accounts.

2001-12-11  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/druid-euro-conv.c: More sanity checks. Added support
	for using existing exchange accounts.

2001-12-10  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/druid-euro-conv.c: Added support for Stock accounts.

	* src/gnome/window-main.c, src/gnome/window-acct-tree.c: moved
	Euro conversion to Tools menu.

	* po/sv.po: Fixed Swedish translation, by Christian Rose
	<menthos@menthos.com>, who thanks Peter Karlsson
	<peter@softwolves.pp.se> for his comments.

	* po/pt.po: Updated portuguese translation by Duarte Loreto
	<happyguy_pt@hotmail.com>
