@@ -80,8 +80,14 @@ gnc_numeric gnc_ui_convert_balance_to_currency(gnc_numeric balance,
 gnc_numeric gnc_ui_account_get_balance (Account *account,
                                         gboolean include_children);
 
-gnc_numeric gnc_ui_account_get_reconciled_balance(Account *account, gboolean include_children);
-gnc_numeric gnc_ui_account_get_balance_as_of_date (Account *account, time_t date, gboolean use_shares, gboolean include_children);
+gnc_numeric gnc_ui_account_get_reconciled_balance(Account *account,
+                                                  gboolean use_shares,
+                                                  gboolean include_children);
+
+gnc_numeric gnc_ui_account_get_balance_as_of_date (Account *account,
+                                                   time_t date,
+                                                   gboolean use_shares,
+                                                   gboolean include_children);
 
 const char * gnc_get_reconcile_str (char reconciled_flag);
 
